# dao-bridge-translator

./: .gitignore  CLAUDE.md  README.md  SKILL.md  dao-bridge-translator-building-specs-prompts.md  pyproject.toml
build_phases/: 2b-handoff-issues.md  glossary-cluster-evidence-and-auto-merge.md  glossary-refactor-phase1.md  glossary-refactor-phase2.md
scripts/: bench_translate.ps1  benchmark_translation.py  create_chunk_fixtures.py  create_mini_epubs.py  probe_embeddings.py  test_openai_compatible.py
src/dao_bridge/: __init__.py  assemble.py  chunk.py  classify.py  clean.py  cli.py  config.py  extract.py  glossary.py  glossary_clustering.py  glossary_embeddings.py  lang_names.json  llm_client.py  logging.py  rebuild.py  schemas.py  similarity.py  state.py  toc.py  translate.py  workdir.py
src/dao_bridge/prompts/: classify.txt  glossary_cluster.txt  glossary_extract.txt  glossary_reconcile_speech.txt  glossary_reconcile_surface_form.txt  glossary_reconcile_term.txt  glossary_summary_compress.txt  translate_pass1.txt  translate_pass1_user.txt  translate_pass2.txt  translate_pass2_user.txt  translate_qa.txt  translate_qa_fix.txt  translate_qa_fix_user.txt  (+3 more)
tests/: conftest.py  test_assemble.py  test_chunk.py  test_classify.py  test_clean.py  test_config.py  test_extract.py  test_glossary.py  test_glossary_clustering.py  test_integration.py  test_llm_client.py  test_logging.py  test_rebuild.py  test_schemas.py  test_similarity.py  test_state.py  test_toc.py  test_translate.py  test_workdir.py
tests/fixtures/: Perfect_World_SMALL_UNPROCESSED_CN.epub  Perfect_World_SMALL_UNPROCESSED_EN.epub  ReZero-Vol5-mini-eng.epub  ReZero-Vol5-mini-jp.epub
(+7 files in other folders)
