[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dao-bridge-translator"
version = "0.1.0"
description = "AI translation pipeline for Japanese light novel EPUBs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "phazei" },
]
keywords = ["epub", "translation", "japanese", "light-novel", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.13",
    "markdown>=3.5",
    "openai>=1.12",
    "pydantic>=2.5",
    "click>=8.1",
    "pyyaml>=6.0",
    "tiktoken>=0.6",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
dao-bridge = "dao_bridge.cli:cli"

[project.urls]
Homepage = "https://github.com/phazei/dao-bridge-translator"
Repository = "https://github.com/phazei/dao-bridge-translator"
Issues = "https://github.com/phazei/dao-bridge-translator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::bs4.XMLParsedAsHTMLWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
